# orbit-sim

./: .gitignore  CMakeLists.txt  README.md
core/inc/: camera.h  planet.h  satellite.h  skybox.h  sphere.h
core/src/: gui.cpp  planet.cpp  sat_sim.cpp  satellite.cpp  shader.cpp  sphere.cpp  window.cpp
scripts/: orbits.py  process_TLE.py  starlink_processed.txt
